cursive-bootstrap/tests/ui/E-CON/E-CON-0151.cursive
// RUN: compile-fail
// DIAG: E-CON-0151
// SPEC: 8.9
// DESC: shared capture in GPU dispatch

record Data {
    value: i32
}

procedure gpu_shared(ctx: Context, d: shared Data) -> () {
    parallel ctx ~> gpu() {
        dispatch i in 0..100 {
            let x: i32 = d.value  //~ ERROR E-CON-0151: shared capture in GPU
        }
    }
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
